# ProjectParallelProgrammeren

./: API.rst  AUTHORS.rst  HISTORY.rst  LICENSE  README.md  README.rst  micc.json  presentatie project.pptx  projectparallelprogrammeren.py  pyproject.toml  run.sh  run1.sh  script.py  script1.py  script2.py  script3.py
Documentatie (html)/: .buildinfo  api.html  apps.html  authors.html  genindex.html  history.html  index.html  installation.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
Documentatie (html)/_modules/: index.html  numpy.html  projectparallelprogrammeren.html
Documentatie (html)/_modules/projectparallelprogrammeren/: atomen.html  codesimulatie.html  montecarlo_v0.html  montecarlo_v1.html  montecarlo_v2.html  montecarlo_v3.html
Documentatie (html)/_sources/: installation.rst.txt
docs/: Makefile  conf.py  index.rst
projectparallelprogrammeren/: __init__.py  atomen.py  codesimulatie.py  montecarlo_v0.py  montecarlo_v1.py  montecarlo_v2.py  montecarlo_v3.py
projectparallelprogrammeren/f2py_atomenf/: atomenf.f90  atomenf.rst
projectparallelprogrammeren/f2py_atomenfv2/: atomenfv2.f90  atomenfv2.rst
projectparallelprogrammeren/f2py_rng/: rng.f90  rng.rst
tests/: __init__.py  test_atomen.py  test_codesimulatie.py  test_f2py_atomenf.py  test_f2py_atomenfv2.py  test_f2py_rng.py  test_montecarlo_v0.py  test_montecarlo_v3.py  test_projectparallelprogrammeren.py
