[tool.poetry]
name = "ProjectParallelProgrammeren"
version = "1.0.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Indy Verhoeven <indyverhoeven1@outlook.com>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/fury106/ProjectParallelProgrammeren"
homepage = "https://github.com/fury106/ProjectParallelProgrammeren"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.7"
et-micc-build = ">=0.10.23,<1.0.0"
mpi4py = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"
numpy = "^1.18.2"
et-micc-build = "^0.10.18"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
